Remove the "other" project from each project's configuration.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -23,17 +23,6 @@ lsb_bzr_sdk_projects = ["lsbdev-base", "lsbdev-cc", "lsbdev-c++",
 lsb_pkg_subdir_projects = ["makelsbpkg"]
 lsb_packaging_projects = [("lsbappchk", "misc-test")]
 
-moblin_osv_tests_projects = ["moblin-test-kernel", "moblin-test-media", 
-                             "moblin-test-browser", "moblin-test-clutter",
-                             "moblin-test-package-management", 
-                             "moblin-test-desktop", 
-                             "moblin-test-package-version", 
-                             "moblin-test-graphics", "moblin-test-perf-power",
-                             "moblin-test-bickley"]
-moblin_change_sources = ["app-checker", "distribution-checker", 
-                         "moblin-osv-tests", "moblin-isv-tests", "misc-test", 
-                         "moblin-xvfb"]
-
 
 # This is the dictionary that the buildmaster pays attention to. We also use
 # a shorter alias to save typing.
@@ -45,8 +34,7 @@ c = BuildmasterConfig = {}
 # a tuple of bot-name and bot-password. These correspond to values given to
 # the buildslave's mktap invocation.
 from buildbot.buildslave import BuildSlave
-c['slaves'] = [BuildSlave("lfbuild-amd64", "bot1passwd", max_builds=1),
-               BuildSlave("lfbuild-moblin", "Quai8ree", max_builds=1)]
+c['slaves'] = [BuildSlave("lfbuild-amd64", "bot1passwd", max_builds=1)]
 
 # to limit to two concurrent builds on a slave, use
 #  c['slaves'] = [BuildSlave("bot1name", "bot1passwd", max_builds=2)]
@@ -55,7 +43,7 @@ c['slaves'] = [BuildSlave("lfbuild-amd64", "bot1passwd", max_builds=1),
 # 'slavePortnum' defines the TCP port to listen on. This must match the value
 # configured into the buildslaves (with their --master option)
 
-c['slavePortnum'] = 9989
+c['slavePortnum'] = 9988
 
 lsb_buildslave_names = ["lfbuild-amd64"]
 lsb_buildslave_arch_indep_names = ["lfbuild-amd64"]
@@ -79,11 +67,6 @@ for branch in lsb_change_sources:
         BzrPoller(url="%slsb/devel/%s" % (bzr_toplevel, branch),
                   branch_name="lsb/devel/" + branch))
     added.append(branch)
-
-for branch in moblin_change_sources:
-    c['change_source'].append(
-        BzrPoller(url="%smoblin/devel/%s" % (bzr_toplevel, branch),
-                  branch_name="moblin/devel/" + branch))
 
 # For example, if you had CVSToys installed on your repository, and your
 # CVSROOT/freshcfg file had an entry like this:
@@ -138,25 +121,6 @@ for (prj, repo) in lsb_packaging_projects:
                                      builderNames=["build-" + prj],
                                      treeStableTimer=stable_timer_seconds)
     c['schedulers'].append(prj_scheduler)
-
-# Moblin schedulers
-
-for (prj, branch_names) in [("build-moblin-osv-tests", ["moblin-osv-tests"]),
-                            ("build-moblin-app-checker", 
-                             ["app-checker", "moblin-isv-tests", "misc-test"]),
-                            ("build-moblin-distribution-checker", 
-                             ["distribution-checker"]),
-                            ("build-moblin-xvfb", ["moblin-xvfb"]),
-                            ("build-libchk-me", ["misc-test"])]:
-    branches = ["moblin/devel/" + x for x in branch_names]
-    prj_scheduler = \
-        scheduler.AnyBranchScheduler(name=prj, branches=branches,
-                                     builderNames=[prj],
-                                     treeStableTimer=stable_timer_seconds)
-    update_scheduler = scheduler.Dependent(name="update-" + prj,
-                                           builderNames=["build-moblin-results"],
-                                           upstream=prj_scheduler)
-    c['schedulers'].extend([prj_scheduler, update_scheduler])
 
 
 ####### BUILDERS
@@ -292,133 +256,6 @@ for (prj, repo) in lsb_packaging_projects:
         { 'name': 'build-%s' % prj, 'slavenames': lsb_buildslave_names,
           'builddir': prj, 'factory': b, 'category': 'lsb' })
 
-# Moblin builds
-
-app_checker_builder = factory.BuildFactory()
-
-# Direct bzr version of checkout step.  This doesn't work, because a
-# ChangeSource will override the defaultBranch setting, and you get three
-# checkouts of the same source.
-#app_checker_builder.addStep(Bzr(baseURL=moblin_bzr_toplevel, 
-#                    defaultBranch="devel/app-checker",
-#                    mode="update", timeout=60*60, workdir="app-checker"))
-#app_checker_builder.addStep(Bzr(baseURL=moblin_bzr_toplevel, 
-#                    defaultBranch="devel/moblin-isv-tests",
-#                    mode="update", timeout=60*60, workdir="moblin-isv-tests"))
-#app_checker_builder.addStep(Bzr(baseURL=moblin_bzr_toplevel, 
-#                    defaultBranch="devel/misc-test",
-#                    mode="update", timeout=60*60, workdir="misc-test"))
-
-# ShellCommand version of checkout step.
-app_checker_repos = ["app-checker", "moblin-isv-tests", "misc-test"]
-for repo in app_checker_repos:
-    app_checker_builder.addStep(
-        ShellCommand(command=["bzr", "checkout",
-                              os.path.join(bzr_toplevel, "moblin/devel", 
-                                           repo)]))
-# The following steps may need to be adjusted for the Bzr or ShellCommand
-# versions of the checkout step.
-
-app_checker_builder.addStep(ShellCommand(command=['rm', '-rf', 
-                                      '../../moblin-results/app-checker'],
-                                         name="copypkg1"))
-app_checker_builder.addStep(ShellCommand(command=['mkdir', '-p', 
-                                      '../../moblin-results/app-checker'],
-                                         name="copypkg2"))
-app_checker_builder.addStep(ShellCommand(command="cd app-checker/package && make BUILD_NO_DEB=1 BZRTREES=../..",
-                                         name="build"))
-app_checker_builder.addStep(ShellCommand(command='cp app-checker/package/*.rpm ../../moblin-results/app-checker',
-                                         name="copypkg3"))
-
-for repo in app_checker_repos:
-    app_checker_builder.addStep(ShellCommand(command=["rm", "-rf", repo]))
-
-dist_checker_builder = factory.BuildFactory()
-dist_checker_builder.addStep(Bzr(baseURL=bzr_toplevel, 
-                                 defaultBranch="moblin/devel/distribution-checker",
-                                 mode="copy", timeout=60*60))
-dist_checker_builder.addStep(ShellCommand(command=['rm', '-rf', 
-                                                   '../../moblin-results/distribution-checker'],
-                                          name="copypkg1"))
-dist_checker_builder.addStep(ShellCommand(command=['mkdir', '-p', 
-                                                   '../../moblin-results/distribution-checker'],
-                                          name="copypkg2"))
-dist_checker_builder.addStep(ShellCommand(command="cd package && make BUILD_NO_DEB=1 BRANCH=moblin",
-                                          name="build", timeout=60*60))
-dist_checker_builder.addStep(ShellCommand(command='cp package/*.rpm ../../moblin-results/distribution-checker',
-                                          name="copypkg3"))
-
-osv_tests_builder = factory.BuildFactory()
-osv_tests_builder.addStep(Bzr(baseURL=bzr_toplevel, 
-                              defaultBranch="moblin/devel/moblin-osv-tests",
-                              mode="copy", timeout=60*60))
-osv_tests_builder.addStep(
-    ShellCommand(command=['rm', '-rf', 
-                          '../../moblin-results/moblin_osv_tests'],
-                 name="copypkgs1"))
-osv_tests_builder.addStep(
-    ShellCommand(command=['mkdir', '-p', 
-                          '../../moblin-results/moblin_osv_tests'],
-                 name="copypkgs2"))
-for prj in moblin_osv_tests_projects:
-    osv_tests_builder.addStep(
-        ShellCommand(command="cd %s/package && ./pack.sh" % prj,
-                     name="build_" + prj))
-    osv_tests_builder.addStep(
-        ShellCommand(command='cp %s/package/*.rpm ../../moblin-results/moblin_osv_tests' % prj,
-                     name="copypkgs_" + prj))
-
-moblin_xvfb_builder = factory.BuildFactory()
-moblin_xvfb_builder.addStep(Bzr(baseURL=bzr_toplevel, 
-                                defaultBranch="moblin/devel/moblin-xvfb",
-                                mode="copy", timeout=60*60))
-moblin_xvfb_builder.addStep(
-    ShellCommand(command=['rm', '-rf', 
-                          '../../moblin-results/moblin-xvfb'],
-                 name="copypkg1"))
-moblin_xvfb_builder.addStep(
-    ShellCommand(command=['mkdir', '-p', 
-                          '../../moblin-results/moblin-xvfb'],
-                 name="copypkg2"))
-moblin_xvfb_builder.addStep(
-    ShellCommand(command="cd package && make BUILD_NO_DEB=1",
-                 name="build", timeout=60*60))
-moblin_xvfb_builder.addStep(
-    ShellCommand(command='cp package/*.rpm ../../moblin-results/moblin-xvfb',
-                 name="copypkg3"))
-
-libchk_me_builder = factory.BuildFactory()
-libchk_me_builder.addStep(Bzr(baseURL=bzr_toplevel, 
-                              defaultBranch="moblin/devel/misc-test",
-                              mode="copy", timeout=60*60))
-libchk_me_builder.addStep(
-    ShellCommand(command=['rm', '-rf', 
-                          '../../moblin-results/libchk-me'],
-                 name="copypkg1"))
-libchk_me_builder.addStep(
-    ShellCommand(command=['mkdir', '-p', 
-                          '../../moblin-results/libchk-me'],
-                 name="copypkg2"))
-libchk_me_builder.addStep(
-    ShellCommand(command="cd package && make",
-                 name="build", timeout=60*60))
-libchk_me_builder.addStep(
-    ShellCommand(command='cp package/*.rpm ../../moblin-results/libchk-me',
-                 name="copypkg3"))
-
-results_builder = factory.BuildFactory()
-results_builder.addStep(ShellCommand(command=["tar", "czf", 
-                                              "moblin-results.tar.gz", 
-                                              "../../moblin-results"], 
-                                     name="tar"))
-results_builder.addStep(FileUpload(slavesrc="moblin-results.tar.gz", 
-                                   masterdest="moblin-results.tar.gz"))
-results_builder.addStep(MasterShellCommand(command="./upload-moblin-results"))
-# For now, keep old results around, since we may not build everything
-# every night.  To start fresh daily, uncomment the following.
-#results_builder.addStep(ShellCommand(command=["rm", "-rf", 
-#                                              "../../moblin-results"]))
-
 # Final build configuration
 
 c['builders'] = [
@@ -426,25 +263,6 @@ c['builders'] = [
       'builddir': 'build-sdk', 'factory': build_sdk, 'category': 'lsb' },
     { 'name': 'update-sdk', 'slavenames': lsb_buildslave_names,
       'builddir': 'update-sdk', 'factory': update_sdk, 'category': 'lsb' },
-    { 'name': 'build-moblin-osv-tests', 'slavenames': ['lfbuild-moblin'],
-      'builddir': 'build-moblin-osv-tests', 'factory': osv_tests_builder, 
-      'category': 'moblin' },
-    { 'name': 'build-moblin-app-checker', 'slavenames': ['lfbuild-moblin'],
-      'builddir': 'build-moblin-app-checker', 'factory': app_checker_builder, 
-      'category': 'moblin' },
-    { 'name': 'build-moblin-distribution-checker', 
-      'slavenames': ['lfbuild-moblin'],
-      'builddir': 'build-moblin-distribution-checker', 
-      'factory': dist_checker_builder, 'category': 'moblin' },
-    { 'name': 'build-moblin-xvfb', 'slavenames': ['lfbuild-moblin'],
-      'builddir': 'build-moblin-xvfb', 'factory': moblin_xvfb_builder,
-      'category': 'moblin' },
-    { 'name': 'build-libchk-me', 'slavenames': ['lfbuild-moblin'],
-      'builddir': 'build-libchk-me', 'factory': libchk_me_builder,
-      'category': 'moblin' },
-    { 'name': 'build-moblin-results', 'slavenames': ['lfbuild-moblin'],
-      'builddir': 'build-moblin-results', 'factory': results_builder,
-      'category': 'moblin' },
 ]
 c['builders'].extend(lsb_builds)
 
@@ -458,7 +276,7 @@ c['builders'].extend(lsb_builds)
 c['status'] = []
 
 from buildbot.status import html
-c['status'].append(html.WebStatus(http_port=8010, allowForce=True))
+c['status'].append(html.WebStatus(http_port=8009, allowForce=True))
 
 # from buildbot.status import mail
 # c['status'].append(mail.MailNotifier(fromaddr="buildbot@localhost",
@@ -500,8 +318,8 @@ c['status'].append(html.WebStatus(http_port=8010, allowForce=True))
 # waterfall HTML page. The 'projectURL' string will be used to provide a link
 # from buildbot HTML pages to your project's home page.
 
-c['projectName'] = "Linux Foundation"
-c['projectURL'] = "http://www.linuxfoundation.org/"
+c['projectName'] = "LSB"
+c['projectURL'] = "http://www.linuxbase.org/"
 
 # the 'buildbotURL' string should point to the location where the buildbot's
 # internal web server (usually the html.Waterfall page) is visible. This
@@ -509,4 +327,4 @@ c['projectURL'] = "http://www.linuxfoundation.org/"
 # with an externally-visible host name which the buildbot cannot figure out
 # without some help.
 
-c['buildbotURL'] = "http://dev.linuxfoundation.org/buildbot/"
+c['buildbotURL'] = "http://dev.linuxfoundation.org/buildbot/lsb/"
