--- a/moblin_master.cfg
+++ b/moblin_master.cfg
@@ -18,11 +18,6 @@ stable_timer_seconds = stable_timer_hours * 60 * 60
 
 bzr_toplevel = "http://bzr.linuxfoundation.org/"
 
-lsb_bzr_sdk_projects = ["lsbdev-base", "lsbdev-cc", "lsbdev-c++",
-                        "lsbdev-desktop", "lsbdev-qt", "lsbdev-qt3"]
-lsb_pkg_subdir_projects = ["makelsbpkg"]
-lsb_packaging_projects = [("lsbappchk", "misc-test")]
-
 moblin_osv_tests_projects = ["moblin-test-kernel", "moblin-test-media", 
                              "moblin-test-browser", "moblin-test-clutter",
                              "moblin-test-package-management", 
@@ -45,8 +40,7 @@ c = BuildmasterConfig = {}
 # a tuple of bot-name and bot-password. These correspond to values given to
 # the buildslave's mktap invocation.
 from buildbot.buildslave import BuildSlave
-c['slaves'] = [BuildSlave("lfbuild-amd64", "bot1passwd", max_builds=1),
-               BuildSlave("lfbuild-moblin", "Quai8ree", max_builds=1)]
+c['slaves'] = [BuildSlave("lfbuild-moblin", "Quai8ree", max_builds=1)]
 
 # to limit to two concurrent builds on a slave, use
 #  c['slaves'] = [BuildSlave("bot1name", "bot1passwd", max_builds=2)]
@@ -57,9 +51,6 @@ c['slaves'] = [BuildSlave("lfbuild-amd64", "bot1passwd", max_builds=1),
 
 c['slavePortnum'] = 9989
 
-lsb_buildslave_names = ["lfbuild-amd64"]
-lsb_buildslave_arch_indep_names = ["lfbuild-amd64"]
-
 ####### CHANGESOURCES
 
 # the 'change_source' setting tells the buildmaster how it should find out
@@ -69,16 +60,6 @@ lsb_buildslave_arch_indep_names = ["lfbuild-amd64"]
 from bzr_buildbot import BzrPoller
 
 c['change_source'] = []
-lsb_change_sources = lsb_pkg_subdir_projects + \
-    [x[1] for x in lsb_packaging_projects]
-added = []
-for branch in lsb_change_sources:
-    if branch in added:
-        continue
-    c['change_source'].append(
-        BzrPoller(url="%slsb/devel/%s" % (bzr_toplevel, branch),
-                  branch_name="lsb/devel/" + branch))
-    added.append(branch)
 
 for branch in moblin_change_sources:
     c['change_source'].append(
@@ -114,32 +95,7 @@ from buildbot import scheduler
 
 # LSB schedulers
 
-sch_lsb_sdk = scheduler.Nightly(name="build-sdk", branch=None,
-                                builderNames=["build-sdk"],
-                                hour=19, minute=0)
-sch_update_lsb_sdk = scheduler.Dependent(name="update-sdk",
-                                         upstream=sch_lsb_sdk,
-                                         builderNames=["update-sdk"])
-
-c['schedulers'] = [sch_lsb_sdk, sch_update_lsb_sdk]
-
-for prj in lsb_pkg_subdir_projects:
-    prj_scheduler = scheduler.Scheduler(name="build-" + prj,
-                                        branch=os.path.join("lsb/devel", prj),
-                                        builderNames=["build-" + prj],
-                                        treeStableTimer=stable_timer_seconds)
-    c['schedulers'].append(prj_scheduler)
-
-for (prj, repo) in lsb_packaging_projects:
-    branches = [os.path.join("lsb/devel", repo), "lsb/devel/packaging"]
-    prj_scheduler = \
-        scheduler.AnyBranchScheduler(name="build-" + prj,
-                                     branches=branches,
-                                     builderNames=["build-" + prj],
-                                     treeStableTimer=stable_timer_seconds)
-    c['schedulers'].append(prj_scheduler)
-
-# Moblin schedulers
+c['schedulers'] = []
 
 for (prj, branch_names) in [("build-moblin-osv-tests", ["moblin-osv-tests"]),
                             ("build-moblin-app-checker", 
@@ -205,94 +161,6 @@ from buildbot.process.properties import WithProperties
 
 from lfbuildbot import PropMasterShellCommand, LSBBuildPackage, \
     LSBBuildFromPackaging
-
-# LSB builds
-
-lsb_builds = []
-
-build_sdk = factory.BuildFactory()
-build_sdk.addStep(Bzr(baseURL=bzr_toplevel, 
-                      defaultBranch="lsb/devel/packaging",
-                      mode="copy"))
-build_sdk.addStep(ShellCommand(command=['reset-sdk'], name="reset-sdk"))
-build_sdk.addStep(ShellCommand(command=["rm", "-rf", 
-                                        "../sdk-results"],
-                               name="rm-old-results"))
-for sdk_project in lsb_bzr_sdk_projects:
-    build_sdk.addStep(ShellCommand(command=['mkdir', '-p', 
-                                            '../sdk-results/' + sdk_project],
-                                   name="mkdir_" + sdk_project))
-    sdk_command = "cd " + sdk_project + " && make rpm_package"
-    build_sdk.addStep(ShellCommand(command=sdk_command,
-                                   name="build_" + sdk_project))
-    build_sdk.addStep(
-        ShellCommand(command="cp %s/*.rpm ../sdk-results/%s" 
-                             % (sdk_project, sdk_project),
-                     name="copy_" + sdk_project))
-build_sdk.addStep(ShellCommand(command=['tar', 'czf', '../sdk-results.tar.gz',
-                                        '../sdk-results'],
-                               name="pack-sdk"))
-build_sdk.addStep(FileUpload(slavesrc="../sdk-results.tar.gz", 
-                             masterdest="lsb-sdk-results.tar.gz"))
-build_sdk.addStep(
-    PropMasterShellCommand(command=["mv", "-f", "lsb-sdk-results.tar.gz",
-                                    WithProperties("lsb-sdk-results-%(slavename)s.tar.gz")]))
-
-update_sdk = factory.BuildFactory()
-update_sdk.addStep(ShellCommand(command=['update-sdk', 
-                                         '../../build-sdk/sdk-results']))
-
-for prj in lsb_pkg_subdir_projects:
-    b = factory.BuildFactory()
-    b.addStep(Bzr(baseURL=bzr_toplevel,
-                  defaultBranch="lsb/devel/%s" % prj,
-                  mode="copy", timeout=4*60*60))
-    b.addStep(LSBBuildPackage())
-    b.addStep(ShellCommand(command=["rm", "-rf", "../results"]))
-    b.addStep(ShellCommand(command=["mkdir", "-p", "../results"]))
-    b.addStep(ShellCommand(command="cp package/*.rpm ../results"))
-    b.addStep(ShellCommand(command=["tar", "czf", "../results.tar.gz", 
-                                    "../results"]))
-    b.addStep(ShellCommand(command=["rm", "-rf", "../results"]))
-    b.addStep(FileUpload(slavesrc="../results.tar.gz", 
-                         masterdest="%s-results.tar.gz" % prj))
-    b.addStep(
-        PropMasterShellCommand(command=["mv", "-f", 
-                                        "%s-results.tar.gz" % prj,
-                                        WithProperties("%s-results-%%(slavename)s.tar.gz" % prj)]))
-
-    lsb_builds.append(
-        { 'name': 'build-%s' % prj, 'slavenames': lsb_buildslave_names,
-          'builddir': prj, 'factory': b, 'category': 'lsb' })
-
-for (prj, repo) in lsb_packaging_projects:
-    b = factory.BuildFactory()
-    b.addStep(Bzr(baseURL=bzr_toplevel,
-                  defaultBranch="lsb/devel/%s" % repo,
-                  workdir=repo, mode="update", timeout=4*60*60))
-    b.addStep(ShellCommand(command=["rm", "-rf", "../packaging"]))
-    b.addStep(ShellCommand(
-            command=["bzr", "checkout", 
-                     os.path.join(bzr_toplevel, "lsb/devel/packaging"),
-                     "../packaging"]))
-    b.addStep(LSBBuildFromPackaging(subdir=prj,
-                                    env={"BZRTREES": ".."}))
-    b.addStep(ShellCommand(command=["rm", "-rf", "../results"]))
-    b.addStep(ShellCommand(command=["mkdir", "-p", "../results"]))
-    b.addStep(ShellCommand(command="cp ../packaging/%s/*.rpm ../results" % prj))
-    b.addStep(ShellCommand(command=["tar", "czf", "../results.tar.gz", 
-                                    "../results"]))
-    b.addStep(ShellCommand(command=["rm", "-rf", "../results"]))
-    b.addStep(FileUpload(slavesrc="../results.tar.gz", 
-                         masterdest="%s-results.tar.gz" % prj))
-    b.addStep(PropMasterShellCommand(
-            command=["mv", "-f", "%s-results.tar.gz" % prj,
-                     WithProperties("%s-results-%%(slavename)s.tar.gz" % prj)]))
-    lsb_builds.append(
-        { 'name': 'build-%s' % prj, 'slavenames': lsb_buildslave_names,
-          'builddir': prj, 'factory': b, 'category': 'lsb' })
-
-# Moblin builds
 
 app_checker_builder = factory.BuildFactory()
 
@@ -422,10 +290,6 @@ results_builder.addStep(MasterShellCommand(command="./upload-moblin-results"))
 # Final build configuration
 
 c['builders'] = [
-    { 'name': 'build-sdk', 'slavenames': lsb_buildslave_names,
-      'builddir': 'build-sdk', 'factory': build_sdk, 'category': 'lsb' },
-    { 'name': 'update-sdk', 'slavenames': lsb_buildslave_names,
-      'builddir': 'update-sdk', 'factory': update_sdk, 'category': 'lsb' },
     { 'name': 'build-moblin-osv-tests', 'slavenames': ['lfbuild-moblin'],
       'builddir': 'build-moblin-osv-tests', 'factory': osv_tests_builder, 
       'category': 'moblin' },
@@ -446,7 +310,6 @@ c['builders'] = [
       'builddir': 'build-moblin-results', 'factory': results_builder,
       'category': 'moblin' },
 ]
-c['builders'].extend(lsb_builds)
 
 
 ####### STATUS TARGETS
@@ -500,8 +363,8 @@ c['status'].append(html.WebStatus(http_port=8010, allowForce=True))
 # waterfall HTML page. The 'projectURL' string will be used to provide a link
 # from buildbot HTML pages to your project's home page.
 
-c['projectName'] = "Linux Foundation"
-c['projectURL'] = "http://www.linuxfoundation.org/"
+c['projectName'] = "Moblin Compliance"
+c['projectURL'] = "http://www.moblin.org/compliance/"
 
 # the 'buildbotURL' string should point to the location where the buildbot's
 # internal web server (usually the html.Waterfall page) is visible. This
@@ -509,4 +372,4 @@ c['projectURL'] = "http://www.linuxfoundation.org/"
 # with an externally-visible host name which the buildbot cannot figure out
 # without some help.
 
-c['buildbotURL'] = "http://dev.linuxfoundation.org/buildbot/"
+c['buildbotURL'] = "http://dev.linuxfoundation.org/buildbot/moblin/"
