Import needed modules with the reorganization.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -163,6 +163,8 @@ for (prj, repo) in lsb_packaging_projects:
 #c['builders'] = [b1]
 
 from buildbot.process import factory
+from buildbot.steps.shell import ShellCommand
+from buildbot.steps.master import MasterShellCommand
 from buildbot.steps.source import Bzr
 from buildbot.steps.transfer import FileUpload
 from buildbot.process.properties import WithProperties
