--- a/moblin_master.cfg
+++ b/moblin_master.cfg
@@ -155,6 +155,8 @@ for (prj, branch_names) in [("build-moblin-osv-tests", ["moblin-osv-tests"]),
 #c['builders'] = [b1]
 
 from buildbot.process import factory
+from buildbot.steps.shell import ShellCommand
+from buildbot.steps.master import MasterShellCommand
 from buildbot.steps.source import Bzr
 from buildbot.steps.transfer import FileUpload
 from buildbot.process.properties import WithProperties
