--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -278,7 +278,14 @@ c['builders'].extend(lsb_builds)
 c['status'] = []
 
 from buildbot.status import html
-c['status'].append(html.WebStatus(http_port=8009, allowForce=True))
+c['status'].append(html.WebStatus(http_port=8009, allowForce=False))
+
+from buildbot.status import words
+c['status'].append(words.IRC(host="irc.linuxfoundation.org", nick="lsb_bb",
+                             channels=["#lsb"], allowForce=True,
+                             notify_events={'exception': 1,
+                                            'successToFailure': 1,
+                                            'failureToSuccess': 1}))
 
 # from buildbot.status import mail
 # c['status'].append(mail.MailNotifier(fromaddr="buildbot@localhost",
