Add definitions for all LSB architectures.
This includes slave configurations and one builder per architecture
and project.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -3,13 +3,16 @@
 
 import os
 
-# This is a sample buildmaster config file. It must be installed as
-# 'master.cfg' in your buildmaster's base directory (although the filename
-# can be changed with the --basedir option to 'mktap buildbot master').
-
-# It has one job: define a dictionary named BuildmasterConfig. This
-# dictionary has a variety of keys to control different aspects of the
-# buildmaster. They are documented in docs/config.xhtml .
+# This buildbot config file defines the LSB builds that are needed.
+# 
+# Each project needs one build per architecture; this includes the
+# "sdk" meta-project and all the other pieces we build.  So, to
+# prevent cut-n-pasting, we use conventions.  All architectures are
+# defined in an architectures list, and builds are named
+# "project-arch".  Schedulers for these are named "sch-project-arch".
+# For the special "sdk" project, we have "build-sdk-arch" and
+# "update-sdk-arch" for the two jobs that build and update the SDK.
+# Their schedulers are prefixed with "sch-", like the others.
 
 # Toplevel configuration, used by the builder/scheduler setup.
 
@@ -18,6 +21,7 @@ stable_timer_seconds = stable_timer_hours * 60 * 60
 
 bzr_toplevel = "http://bzr.linuxfoundation.org/"
 
+lsb_archs = ["x86", "x86_64", "ia64", "ppc32", "ppc64", "s390", "s390x"]
 lsb_bzr_sdk_projects = ["lsbdev-base", "lsbdev-cc", "lsbdev-c++",
                         "lsbdev-desktop", "lsbdev-qt", "lsbdev-qt3"]
 lsb_pkg_subdir_projects = ["makelsbpkg"]
@@ -34,7 +38,13 @@ c = BuildmasterConfig = {}
 # a tuple of bot-name and bot-password. These correspond to values given to
 # the buildslave's mktap invocation.
 from buildbot.buildslave import BuildSlave
-c['slaves'] = [BuildSlave("lfbuild-amd64", "bot1passwd", max_builds=1)]
+c['slaves'] = [BuildSlave("lfbuild-x86_64", "bot1passwd", max_builds=1),
+               BuildSlave("lfbuild-x86", "ail1Aebu", max_builds=1),
+               BuildSlave("lfbuild-ia64", "quae7Moh", max_builds=1),
+               BuildSlave("lfbuild-ppc32", "AiSh4aej", max_builds=1),
+               BuildSlave("lfbuild-ppc64", "ai2agaeT", max_builds=1),
+               BuildSlave("lfbuild-s390", "aeGh0ooy", max_builds=1),
+               BuildSlave("lfbuild-s390x", "ahtoop3O", max_builds=1)]
 
 # to limit to two concurrent builds on a slave, use
 #  c['slaves'] = [BuildSlave("bot1name", "bot1passwd", max_builds=2)]
@@ -45,8 +55,10 @@ c['slaves'] = [BuildSlave("lfbuild-amd64", "bot1passwd", max_builds=1)]
 
 c['slavePortnum'] = 9988
 
-lsb_buildslave_names = ["lfbuild-amd64"]
-lsb_buildslave_arch_indep_names = ["lfbuild-amd64"]
+# When building an arch-independent package, it doesn't matter which
+# build slave builds it.  So, we can pick one, or we can use all the
+# build slaves, with each being a backup of the others.
+lsb_buildslave_arch_indep_names = ["lfbuild-x86_64"]
 
 ####### CHANGESOURCES
 
@@ -97,30 +109,36 @@ from buildbot import scheduler
 
 # LSB schedulers
 
-sch_lsb_sdk = scheduler.Nightly(name="build-sdk", branch=None,
-                                builderNames=["build-sdk"],
-                                hour=19, minute=0)
-sch_update_lsb_sdk = scheduler.Dependent(name="update-sdk",
-                                         upstream=sch_lsb_sdk,
-                                         builderNames=["update-sdk"])
+c['schedulers'] = []
 
-c['schedulers'] = [sch_lsb_sdk, sch_update_lsb_sdk]
+for arch in lsb_archs:
+    sch_build = scheduler.Nightly(name="build-sdk-" + arch, branch=None,
+                                  builderNames=["build-sdk-" + arch],
+                                  hour=19, minute=0)
+    sch_update = scheduler.Dependent(name="update-sdk-" + arch,
+                                     upstream=sch_build,
+                                     builderNames=["update-sdk-" + arch])
+    c['schedulers'].extend([sch_build, sch_update])
 
 for prj in lsb_pkg_subdir_projects:
-    prj_scheduler = scheduler.Scheduler(name="build-" + prj,
-                                        branch=os.path.join("lsb/devel", prj),
-                                        builderNames=["build-" + prj],
-                                        treeStableTimer=stable_timer_seconds)
-    c['schedulers'].append(prj_scheduler)
+    for arch in lsb_archs:
+        prj_name = "%s-%s" % (prj, arch)
+        sch = scheduler.Scheduler(name="sch-" + prj_name,
+                                  branch=os.path.join("lsb/devel", prj),
+                                  builderNames=[prj_name],
+                                  treeStableTimer=stable_timer_seconds)
+        c['schedulers'].append(sch)
 
 for (prj, repo) in lsb_packaging_projects:
     branches = [os.path.join("lsb/devel", repo), "lsb/devel/packaging"]
-    prj_scheduler = \
-        scheduler.AnyBranchScheduler(name="build-" + prj,
-                                     branches=branches,
-                                     builderNames=["build-" + prj],
-                                     treeStableTimer=stable_timer_seconds)
-    c['schedulers'].append(prj_scheduler)
+    for arch in lsb_archs:
+        prj_name = "%s-%s" % (prj, arch)
+        sch = \
+            scheduler.AnyBranchScheduler(name="sch-" + prj_name,
+                                         branches=branches,
+                                         builderNames=[prj_name],
+                                         treeStableTimer=stable_timer_seconds)
+        c['schedulers'].append(sch)
 
 
 ####### BUILDERS
@@ -176,97 +194,96 @@ from lfbuildbot import PropMasterShellCommand, LSBBuildPackage, \
 
 lsb_builds = []
 
-build_sdk = factory.BuildFactory()
-build_sdk.addStep(Bzr(baseURL=bzr_toplevel, 
-                      defaultBranch="lsb/devel/packaging",
-                      mode="copy"))
-build_sdk.addStep(ShellCommand(command=['reset-sdk'], name="reset-sdk"))
-build_sdk.addStep(ShellCommand(command=["rm", "-rf", 
-                                        "../sdk-results"],
-                               name="rm-old-results"))
-for sdk_project in lsb_bzr_sdk_projects:
-    build_sdk.addStep(ShellCommand(command=['mkdir', '-p', 
-                                            '../sdk-results/' + sdk_project],
-                                   name="mkdir_" + sdk_project))
-    sdk_command = "cd " + sdk_project + " && make rpm_package"
-    build_sdk.addStep(ShellCommand(command=sdk_command,
-                                   name="build_" + sdk_project))
+for arch in lsb_archs:
+    build_sdk = factory.BuildFactory()
+    build_sdk.addStep(Bzr(baseURL=bzr_toplevel, 
+                          defaultBranch="lsb/devel/packaging",
+                          mode="copy"))
+    build_sdk.addStep(ShellCommand(command=['reset-sdk'], name="reset-sdk"))
+    build_sdk.addStep(ShellCommand(command=["rm", "-rf", 
+                                            "../sdk-results"],
+                                   name="rm-old-results"))
+    for sdk_project in lsb_bzr_sdk_projects:
+        build_sdk.addStep(ShellCommand(command=['mkdir', '-p', 
+                                                '../sdk-results/' + sdk_project],
+                                       name="mkdir_" + sdk_project))
+        sdk_command = "cd " + sdk_project + " && make rpm_package"
+        build_sdk.addStep(ShellCommand(command=sdk_command,
+                                       name="build_" + sdk_project))
+        build_sdk.addStep(
+            ShellCommand(command="cp %s/*.rpm ../sdk-results/%s" 
+                                 % (sdk_project, sdk_project),
+                         name="copy_" + sdk_project))
+    build_sdk.addStep(ShellCommand(command=['tar', 'czf', '../sdk-results.tar.gz',
+                                            '../sdk-results'],
+                                   name="pack-sdk"))
     build_sdk.addStep(
-        ShellCommand(command="cp %s/*.rpm ../sdk-results/%s" 
-                             % (sdk_project, sdk_project),
-                     name="copy_" + sdk_project))
-build_sdk.addStep(ShellCommand(command=['tar', 'czf', '../sdk-results.tar.gz',
-                                        '../sdk-results'],
-                               name="pack-sdk"))
-build_sdk.addStep(FileUpload(slavesrc="../sdk-results.tar.gz", 
-                             masterdest="lsb-sdk-results.tar.gz"))
-build_sdk.addStep(
-    PropMasterShellCommand(command=["mv", "-f", "lsb-sdk-results.tar.gz",
-                                    WithProperties("lsb-sdk-results-%(slavename)s.tar.gz")]))
-
-update_sdk = factory.BuildFactory()
-update_sdk.addStep(ShellCommand(command=['update-sdk', 
-                                         '../../build-sdk/sdk-results']))
-
-for prj in lsb_pkg_subdir_projects:
-    b = factory.BuildFactory()
-    b.addStep(Bzr(baseURL=bzr_toplevel,
-                  defaultBranch="lsb/devel/%s" % prj,
-                  mode="copy", timeout=4*60*60))
-    b.addStep(LSBBuildPackage())
-    b.addStep(ShellCommand(command=["rm", "-rf", "../results"]))
-    b.addStep(ShellCommand(command=["mkdir", "-p", "../results"]))
-    b.addStep(ShellCommand(command="cp package/*.rpm ../results"))
-    b.addStep(ShellCommand(command=["tar", "czf", "../results.tar.gz", 
-                                    "../results"]))
-    b.addStep(ShellCommand(command=["rm", "-rf", "../results"]))
-    b.addStep(FileUpload(slavesrc="../results.tar.gz", 
-                         masterdest="%s-results.tar.gz" % prj))
-    b.addStep(
-        PropMasterShellCommand(command=["mv", "-f", 
-                                        "%s-results.tar.gz" % prj,
-                                        WithProperties("%s-results-%%(slavename)s.tar.gz" % prj)]))
-
+        FileUpload(slavesrc="../sdk-results.tar.gz", 
+                   masterdest="lsb-sdk-results-%s.tar.gz" % arch))
     lsb_builds.append(
-        { 'name': 'build-%s' % prj, 'slavenames': lsb_buildslave_names,
-          'builddir': prj, 'factory': b, 'category': 'lsb' })
+        { 'name': 'build-sdk-' + arch, 'slavenames': ["lfbuild-" + arch],
+          'builddir': 'build-sdk-' + arch, 'factory': build_sdk, 
+          'category': 'lsb' })
 
-for (prj, repo) in lsb_packaging_projects:
-    b = factory.BuildFactory()
-    b.addStep(Bzr(baseURL=bzr_toplevel,
-                  defaultBranch="lsb/devel/%s" % repo,
-                  workdir=repo, mode="update", timeout=4*60*60))
-    b.addStep(ShellCommand(command=["rm", "-rf", "../packaging"]))
-    b.addStep(ShellCommand(
-            command=["bzr", "checkout", 
-                     os.path.join(bzr_toplevel, "lsb/devel/packaging"),
-                     "../packaging"]))
-    b.addStep(LSBBuildFromPackaging(subdir=prj,
-                                    env={"BZRTREES": ".."}))
-    b.addStep(ShellCommand(command=["rm", "-rf", "../results"]))
-    b.addStep(ShellCommand(command=["mkdir", "-p", "../results"]))
-    b.addStep(ShellCommand(command="cp ../packaging/%s/*.rpm ../results" % prj))
-    b.addStep(ShellCommand(command=["tar", "czf", "../results.tar.gz", 
-                                    "../results"]))
-    b.addStep(ShellCommand(command=["rm", "-rf", "../results"]))
-    b.addStep(FileUpload(slavesrc="../results.tar.gz", 
-                         masterdest="%s-results.tar.gz" % prj))
-    b.addStep(PropMasterShellCommand(
-            command=["mv", "-f", "%s-results.tar.gz" % prj,
-                     WithProperties("%s-results-%%(slavename)s.tar.gz" % prj)]))
+    update_sdk = factory.BuildFactory()
+    update_sdk.addStep(
+        ShellCommand(command=['update-sdk', 
+                              '../../build-sdk-%s/sdk-results' % arch]))
     lsb_builds.append(
-        { 'name': 'build-%s' % prj, 'slavenames': lsb_buildslave_names,
-          'builddir': prj, 'factory': b, 'category': 'lsb' })
+        { 'name': 'update-sdk-' + arch, 'slavenames': ["lfbuild-" + arch],
+          'builddir': 'update-sdk-' + arch, 'factory': update_sdk, 
+          'category': 'lsb' })
+
+    for prj in lsb_pkg_subdir_projects:
+        b = factory.BuildFactory()
+        b.addStep(Bzr(baseURL=bzr_toplevel,
+                      defaultBranch="lsb/devel/%s" % prj,
+                      mode="copy", timeout=4*60*60))
+        b.addStep(LSBBuildPackage())
+        b.addStep(ShellCommand(command=["rm", "-rf", "../results"]))
+        b.addStep(ShellCommand(command=["mkdir", "-p", "../results"]))
+        b.addStep(ShellCommand(command="cp package/*.rpm ../results"))
+        b.addStep(ShellCommand(command=["tar", "czf", "../results.tar.gz", 
+                                        "../results"]))
+        b.addStep(ShellCommand(command=["rm", "-rf", "../results"]))
+        b.addStep(FileUpload(slavesrc="../results.tar.gz", 
+                             masterdest="%s-results-%s.tar.gz" % (prj, arch)))
+
+        lsb_builds.append(
+            { 'name': '%s-%s' % (prj, arch), 
+              'slavenames': ["lfbuild-" + arch],
+              'builddir': "%s-%s" % (prj, arch), 'factory': b, 
+              'category': 'lsb' })
+
+    for (prj, repo) in lsb_packaging_projects:
+        b = factory.BuildFactory()
+        b.addStep(Bzr(baseURL=bzr_toplevel,
+                      defaultBranch="lsb/devel/%s" % repo,
+                      workdir=repo, mode="update", timeout=4*60*60))
+        b.addStep(ShellCommand(command=["rm", "-rf", "../packaging"]))
+        b.addStep(ShellCommand(
+                command=["bzr", "checkout", 
+                         os.path.join(bzr_toplevel, "lsb/devel/packaging"),
+                         "../packaging"]))
+        b.addStep(LSBBuildFromPackaging(subdir=prj,
+                                        env={"BZRTREES": ".."}))
+        b.addStep(ShellCommand(command=["rm", "-rf", "../results"]))
+        b.addStep(ShellCommand(command=["mkdir", "-p", "../results"]))
+        b.addStep(ShellCommand(command="cp ../packaging/%s/*.rpm ../results" % prj))
+        b.addStep(ShellCommand(command=["tar", "czf", "../results.tar.gz", 
+                                        "../results"]))
+        b.addStep(ShellCommand(command=["rm", "-rf", "../results"]))
+        b.addStep(FileUpload(slavesrc="../results.tar.gz", 
+                             masterdest="%s-results-%s.tar.gz" % (prj, arch)))
+        lsb_builds.append(
+            { 'name': '%s-%s' % (prj, arch), 
+              'slavenames': ["lfbuild-" + arch],
+              'builddir': "%s-%s" % (prj, arch), 'factory': b, 
+              'category': 'lsb' })
 
 # Final build configuration
 
-c['builders'] = [
-    { 'name': 'build-sdk', 'slavenames': lsb_buildslave_names,
-      'builddir': 'build-sdk', 'factory': build_sdk, 'category': 'lsb' },
-    { 'name': 'update-sdk', 'slavenames': lsb_buildslave_names,
-      'builddir': 'update-sdk', 'factory': update_sdk, 'category': 'lsb' },
-]
-c['builders'].extend(lsb_builds)
+c['builders'] = lsb_builds
 
 
 ####### STATUS TARGETS
