Handle arch-independent packages properly (don't build them everywhere).

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -27,6 +27,12 @@ lsb_bzr_sdk_projects = ["lsbdev-base", "lsbdev-cc", "lsbdev-c++",
 lsb_pkg_subdir_projects = ["makelsbpkg"]
 lsb_packaging_projects = [("lsbappchk", "misc-test")]
 
+lsb_arch_indep_projects = ["makelsbpkg"]
+
+# This funny-sounding setting controls which architecture we hold
+# responsible for building architecture-independent components.
+lsb_buildslave_arch_indep_arch = "x86_64"
+
 
 # This is the dictionary that the buildmaster pays attention to. We also use
 # a shorter alias to save typing.
@@ -55,10 +61,6 @@ c['slaves'] = [BuildSlave("lfbuild-x86_64", "bot1passwd", max_builds=1),
 
 c['slavePortnum'] = 9988
 
-# When building an arch-independent package, it doesn't matter which
-# build slave builds it.  So, we can pick one, or we can use all the
-# build slaves, with each being a backup of the others.
-lsb_buildslave_arch_indep_names = ["lfbuild-x86_64"]
 
 ####### CHANGESOURCES
 
@@ -121,7 +123,11 @@ for arch in lsb_archs:
     c['schedulers'].extend([sch_build, sch_update])
 
 for prj in lsb_pkg_subdir_projects:
-    for arch in lsb_archs:
+    if prj in lsb_arch_indep_projects:
+        archlist = [lsb_buildslave_arch_indep_arch]
+    else:
+        archlist = lsb_archs
+    for arch in archlist:
         prj_name = "%s-%s" % (prj, arch)
         sch = scheduler.Scheduler(name="sch-" + prj_name,
                                   branch=os.path.join("lsb/devel", prj),
@@ -130,8 +136,12 @@ for prj in lsb_pkg_subdir_projects:
         c['schedulers'].append(sch)
 
 for (prj, repo) in lsb_packaging_projects:
+    if prj in lsb_arch_indep_projects:
+        archlist = [lsb_buildslave_arch_indep_arch]
+    else:
+        archlist = lsb_archs
     branches = [os.path.join("lsb/devel", repo), "lsb/devel/packaging"]
-    for arch in lsb_archs:
+    for arch in archlist:
         prj_name = "%s-%s" % (prj, arch)
         sch = \
             scheduler.AnyBranchScheduler(name="sch-" + prj_name,
@@ -193,6 +203,7 @@ from lfbuildbot import PropMasterShellCommand, LSBBuildPackage, \
 # LSB builds
 
 lsb_builds = []
+indep_added = []
 
 for arch in lsb_archs:
     build_sdk = factory.BuildFactory()
@@ -235,6 +246,17 @@ for arch in lsb_archs:
           'category': 'lsb' })
 
     for prj in lsb_pkg_subdir_projects:
+        if prj in lsb_arch_indep_projects:
+            if prj in indep_added:
+                continue
+            else:
+                buildslaves = ["lfbuild-" + lsb_buildslave_arch_indep_arch]
+                build_arch = lsb_buildslave_arch_indep_arch
+                indep_added.append(prj)
+        else:
+            buildslaves = ["lfbuild-" + arch]
+            build_arch = arch
+
         b = factory.BuildFactory()
         b.addStep(Bzr(baseURL=bzr_toplevel,
                       defaultBranch="lsb/devel/%s" % prj,
@@ -247,15 +269,26 @@ for arch in lsb_archs:
                                         "../results"]))
         b.addStep(ShellCommand(command=["rm", "-rf", "../results"]))
         b.addStep(FileUpload(slavesrc="../results.tar.gz", 
-                             masterdest="%s-results-%s.tar.gz" % (prj, arch)))
+                             masterdest="%s-results-%s.tar.gz" % (prj, 
+                                                                  build_arch)))
 
         lsb_builds.append(
-            { 'name': '%s-%s' % (prj, arch), 
-              'slavenames': ["lfbuild-" + arch],
-              'builddir': "%s-%s" % (prj, arch), 'factory': b, 
+            { 'name': '%s-%s' % (prj, build_arch), 'slavenames': buildslaves,
+              'builddir': "%s-%s" % (prj, build_arch), 'factory': b, 
               'category': 'lsb' })
 
     for (prj, repo) in lsb_packaging_projects:
+        if prj in lsb_arch_indep_projects:
+            if prj in indep_added:
+                continue
+            else:
+                buildslaves = ["lfbuild-" + lsb_buildslave_arch_indep_arch]
+                build_arch = lsb_buildslave_arch_indep_arch
+                indep_added.append(prj)
+        else:
+            buildslaves = ["lfbuild-" + arch]
+            build_arch = arch
+
         b = factory.BuildFactory()
         b.addStep(Bzr(baseURL=bzr_toplevel,
                       defaultBranch="lsb/devel/%s" % repo,
@@ -274,11 +307,12 @@ for arch in lsb_archs:
                                         "../results"]))
         b.addStep(ShellCommand(command=["rm", "-rf", "../results"]))
         b.addStep(FileUpload(slavesrc="../results.tar.gz", 
-                             masterdest="%s-results-%s.tar.gz" % (prj, arch)))
+                             masterdest="%s-results-%s.tar.gz" % (prj, 
+                                                                  build_arch)))
+
         lsb_builds.append(
-            { 'name': '%s-%s' % (prj, arch), 
-              'slavenames': ["lfbuild-" + arch],
-              'builddir': "%s-%s" % (prj, arch), 'factory': b, 
+            { 'name': '%s-%s' % (prj, build_arch), 'slavenames': buildslaves,
+              'builddir': "%s-%s" % (prj, build_arch), 'factory': b, 
               'category': 'lsb' })
 
 # Final build configuration
