--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -207,9 +207,12 @@ indep_added = []
 
 for arch in lsb_archs:
     build_sdk = factory.BuildFactory()
-    build_sdk.addStep(Bzr(baseURL=bzr_toplevel, 
-                          defaultBranch="lsb/devel/packaging",
+    build_sdk.addStep(Bzr(repourl=os.path.join(bzr_toplevel, 
+                                               "lsb/devel/packaging"),
                           mode="copy"))
+    build_sdk.addStep(Bzr(repourl=os.path.join(bzr_toplevel, 
+                                               "lsb/devel/build_env"), 
+                          mode="update", workdir="build_env"))
     build_sdk.addStep(ShellCommand(command=['reset-sdk'], name="reset-sdk"))
     build_sdk.addStep(ShellCommand(command=["rm", "-rf", 
                                             "../sdk-results"],
@@ -218,7 +221,8 @@ for arch in lsb_archs:
         build_sdk.addStep(ShellCommand(command=['mkdir', '-p', 
                                                 '../sdk-results/' + sdk_project],
                                        name="mkdir_" + sdk_project))
-        sdk_command = "cd " + sdk_project + " && make rpm_package"
+        sdk_command = "cd " + sdk_project + \
+            " && make rpm_package BZR_ROOT=../.."
         build_sdk.addStep(ShellCommand(command=sdk_command,
                                        name="build_" + sdk_project))
         build_sdk.addStep(
